# finm

./: .env.example  .gitignore  README.md  dodo.py  pyproject.toml  requirements.txt
.cursor/rules/: base-data-science-project.mdc  py-to-ipynb.mdc  references.mdc
docs/: .buildinfo  adding_data_sources.html  cli.html  data_module.html  development.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: adding_data_sources.doctree  cli.doctree  data_module.doctree  development.doctree  index.doctree
docs/.doctrees/apidocs/: index.doctree
docs/.doctrees/apidocs/finm/: finm.analytics.doctree  finm.analytics.factor_analysis.doctree  finm.data._cli.doctree  finm.data._credentials.doctree  finm.data._utils.doctree  finm.data.doctree  finm.data.fama_french._constants.doctree  finm.data.fama_french._load.doctree  finm.data.fama_french._pull.doctree  finm.data.fama_french._transform.doctree  finm.data.fama_french.doctree  finm.data.federal_reserve._constants.doctree  finm.data.federal_reserve._load.doctree  finm.data.federal_reserve._pull.doctree  finm.data.federal_reserve._transform.doctree  finm.data.federal_reserve.doctree  finm.data.he_kelly_manela._constants.doctree  finm.data.he_kelly_manela._load.doctree  finm.data.he_kelly_manela._pull.doctree  finm.data.he_kelly_manela._transform.doctree  finm.data.he_kelly_manela.doctree  finm.data.open_source_bond._constants.doctree  finm.data.open_source_bond._load.doctree  finm.data.open_source_bond._pull.doctree  finm.data.open_source_bond._transform.doctree  finm.data.open_source_bond.doctree  finm.data.wrds._constants.doctree  finm.data.wrds._load.doctree  finm.data.wrds._pull.doctree  finm.data.wrds._transform.doctree  finm.data.wrds.doctree  finm.doctree  finm.fixedincome.bonds.doctree  finm.fixedincome.calc_corp_bond_returns.doctree  finm.fixedincome.doctree  finm.fixedincome.gsw2006_yield_curve.doctree  finm.fixedincome.pricing.doctree
docs/.doctrees/examples/: 01_replicate_GSW_yield_curve_ipynb.doctree  02_corp_bond_returns_ipynb.doctree  03_corp_bond_returns_ftsfr_HKM_ipynb.doctree  04_data_integration_tests_ipynb.doctree  05_factor_regression_example_ipynb.doctree  index.doctree
docs/_modules/: index.html
docs/_modules/finm/: data.html
docs/_modules/finm/analytics/: factor_analysis.html
docs/_modules/finm/data/: _cli.html  _credentials.html  _utils.html  fama_french.html  federal_reserve.html  he_kelly_manela.html  wrds.html  (+1 more)
docs/_sources/: data_module.md  index.md
docs/_sources/apidocs/: index.rst
docs/_sources/examples/: index.md
docs/apidocs/: index.html
docs/apidocs/finm/: finm.analytics.factor_analysis.html  finm.analytics.html  finm.data._cli.html  finm.data._credentials.html  finm.data._utils.html  finm.data.fama_french._constants.html  finm.data.fama_french._load.html  finm.data.fama_french._pull.html  finm.data.fama_french._transform.html  finm.data.fama_french.html  finm.data.federal_reserve._constants.html  finm.data.federal_reserve._load.html  finm.data.federal_reserve._pull.html  finm.data.federal_reserve._transform.html  finm.data.federal_reserve.html  finm.data.he_kelly_manela._constants.html  finm.data.he_kelly_manela._load.html  finm.data.he_kelly_manela._pull.html  finm.data.he_kelly_manela._transform.html  finm.data.he_kelly_manela.html  finm.data.html  finm.data.open_source_bond._constants.html  finm.data.open_source_bond._load.html  finm.data.open_source_bond._pull.html  finm.data.open_source_bond._transform.html  finm.data.open_source_bond.html  finm.data.wrds._constants.html  finm.data.wrds._load.html  finm.data.wrds._pull.html  finm.data.wrds._transform.html  finm.data.wrds.html  finm.fixedincome.bonds.html  finm.fixedincome.calc_corp_bond_returns.html  finm.fixedincome.gsw2006_yield_curve.html  finm.fixedincome.html  finm.fixedincome.pricing.html  finm.html
docs/examples/: 01_replicate_GSW_yield_curve_ipynb.html  02_corp_bond_returns_ipynb.html  03_corp_bond_returns_ftsfr_HKM_ipynb.html  04_data_integration_tests_ipynb.html  05_factor_regression_example_ipynb.html  index.html
docs_src/: adding_data_sources.md  cli.md  conf.py  data_module.md  development.md  index.md
docs_src/_static/: custom.css
docs_src/apidocs/finm/: finm.analytics.factor_analysis.md  finm.data._cli.md  finm.data.fama_french._constants.md  finm.data.fama_french._pull.md  finm.data.fama_french.md  finm.data.federal_reserve._constants.md  finm.data.federal_reserve._load.md  finm.data.federal_reserve._pull.md  finm.data.federal_reserve.md  finm.data.federal_reserve.pull_yield_curve_data.md  finm.data.he_kelly_manela._constants.md  finm.data.he_kelly_manela._pull.md  finm.data.he_kelly_manela.create_ftsfr_datasets.md  finm.data.he_kelly_manela.md  finm.data.he_kelly_manela.pull_he_kelly_manela.md  finm.data.md  finm.data.open_source_bond._constants.md  finm.data.open_source_bond._load.md  finm.data.open_source_bond._pull.md  finm.data.open_source_bond._transform.md  finm.data.open_source_bond.create_ftsfr_datasets.md  finm.data.open_source_bond.md  finm.data.open_source_bond.pull_open_source_bond.md  finm.data.wrds._constants.md  finm.data.wrds._load.md  finm.data.wrds.md  finm.data.wrds_data.md  finm.data.wrds_data.pull_CRSP_treasury.md  finm.data.wrds_data.pull_WRDS_corp_bond.md  finm.fixedincome.calc_corp_bond_returns.md  finm.md
examples/: example_corp_bond_returns.ipynb  example_corp_bond_returns_ftsfr_HKM.ipynb  example_replicate_GSW_treasury_yield_curve.ipynb
src/: 01_replicate_GSW_yield_curve_ipynb.py  02_corp_bond_returns_ipynb.py  03_corp_bond_returns_ftsfr_HKM_ipynb.py  04_data_integration_tests_ipynb.py  05_factor_regression_example_ipynb.py
src/finm/: __init__.py
src/finm/analytics/: __init__.py  factor_analysis.py
src/finm/data/: __init__.py  _cli.py  _credentials.py  _utils.py
src/finm/fixedincome/: __init__.py  bonds.py  calc_corp_bond_returns.py  gsw2006_yield_curve.py  pricing.py
tests/: __init__.py  test_JRS.ipynb  test_JRS.py  test_analytics.py  test_fama_french.py  test_fixedincome.py  test_gsw2006_yield_curve.py  tests.py
(+87 files in other folders)
